--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/brcxzam/Agenda#readme",
   "dependencies": {
     "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
+    "graphql": "^14.2.1",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
     "sequelize": "^5.2.12"
