--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "graphql": "^14.2.1",
     "morgan": "^1.9.1",
     "mysql2": "^1.6.5",
+    "node-sass-middleware": "^0.11.0",
     "sequelize": "^5.2.12"
   },
   "devDependencies": {
+    "bulma": "^0.7.4",
+    "node-sass": "^4.11.0",
     "nodemon": "^1.18.10"
   }
 }
