--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "sync": "node src/database/sync.js"
+    "sync": "node src/database/sync.js",
+    "wpack": "webpack --mode development --watch"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,15 @@
     "sequelize": "^5.7.3"
   },
   "devDependencies": {
-    "nodemon": "^1.18.11"
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "nodemon": "^1.18.11",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1"
   }
 }
