--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "express-graphql": "^0.7.1",
     "graphql": "^14.2.1",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.7.3"
+    "sequelize": "^5.7.3",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
