--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.2.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "mysql2": "^1.6.5",
