--- a/API/package.json
+++ b/API/package.json
@@ -7,8 +7,7 @@
     "build": "babel src --out-dir dist",
     "start": "node dist/index.js",
     "dev": "nodemon src/index.js --exec babel-node",
-    "sync": "babel-node src/database/sync.js",
-    "wpack": "webpack --mode development --watch"
+    "sync": "babel-node src/database/sync.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +23,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
     "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.2.1",
@@ -39,12 +39,6 @@
     "@babel/core": "^7.4.4",
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.5",
-    "nodemon": "^1.18.11",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "webpack": "^4.30.0",
-    "webpack-cli": "^3.3.1"
+    "nodemon": "^1.18.11"
   }
 }
