--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,10 @@
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^3.0.2",
     "markdown-to-jsx": "^6.9.4",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-swipeable-views": "^0.13.3"
