--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "^1.3.6",
     "@material-ui/core": "^4.0.0",
     "@material-ui/icons": "^3.0.2",
-    "markdown-to-jsx": "^6.9.4",
+    "@material-ui/pickers": "^3.1.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
