--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react-moment": "^0.9.2",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "react-swipeable-views": "^0.13.3"
+    "react-swipeable-views": "^0.13.3",
+    "shortid": "^2.2.14"
   },
   "scripts": {
     "start": "react-scripts start",
