--- a/API/package.json
+++ b/API/package.json
@@ -28,6 +28,7 @@
     "express-graphql": "^0.7.1",
     "express-jwt": "^5.3.1",
     "graphql": "^14.3.1",
+    "graphql-type-datetime": "^0.2.4",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
