--- a/client/package.json
+++ b/client/package.json
@@ -4,17 +4,16 @@
   "private": true,
   "dependencies": {
     "@date-io/moment": "^1.3.6",
-    "@material-ui/core": "^4.0.0",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "^4.0.2",
+    "@material-ui/icons": "^4.0.1",
     "@material-ui/pickers": "^3.1.0",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.2",
-    "react-router-dom": "^5.0.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "react-swipeable-views": "^0.13.3",
-    "shortid": "^2.2.14"
+    "react-swipeable-views": "^0.13.3"
   },
   "scripts": {
     "start": "react-scripts start",
