--- a/OwlTIME/app/build.gradle
+++ b/OwlTIME/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation 'com.google.android.material:material:1.1.0-alpha07'
+    implementation 'com.android.volley:volley:1.1.1'
 }
