--- a/OwlTIME/app/src/main/AndroidManifest.xml
+++ b/OwlTIME/app/src/main/AndroidManifest.xml
@@ -13,12 +13,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        android:screenOrientation="portrait">
         <activity
             android:name=".Navigation"
-            android:label="@string/title_activity_navigation"></activity>
-        <activity android:name=".SignUp" />
-        <activity android:name=".MainActivity">
+            android:label="@string/title_activity_navigation"
+            android:launchMode="singleTop"></activity>
+        <activity
+            android:name=".SignUp" />
+        <activity
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
