--- a/API/package.json
+++ b/API/package.json
@@ -33,7 +33,8 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "mysql2": "^1.6.5",
-    "sequelize": "^5.8.7",
+    "nodemailer": "^6.2.1",
+    "sequelize": "^6.0.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
